fixed form and added new images

--- a/en/index.html
+++ b/en/index.html
@@ -113,12 +113,15 @@
                         <blockquote class="d-lg-none">
                             <p>We are kennel of Cane Corso dog breed from Nova Pazova</p>
                         </blockquote>
-                        <h2><a href="../img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide1" class="popup-sale">PUPPIES
+                        <h2><a href="../img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide1" class="popup-sale">PUPPIES
                                 FOR SALE</a></h2>
                         <div class="d-none">
-                            <!-- <a href="../img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                                data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                            </a> -->
+                            <a href="../img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide1" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide1" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide1" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -127,12 +130,15 @@
                     data-slice1-scale="2" data-slice2-scale="2">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-1"></div>
-                        <h2><a href="../img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide2" class="popup-sale">PUPPIES
+                        <h2><a href="../img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide2" class="popup-sale">PUPPIES
                                 FOR SALE</a></h2>
                         <div class="d-none">
-                            <!-- <a href="../img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                            data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                        </a> -->
+                            <a href="../img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide2" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide2" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide2" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -141,12 +147,15 @@
                     data-slice1-scale="1.5" data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-2"></div>
-                        <h2><a href="../img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide3" class="popup-sale">PUPPIES
+                        <h2><a href="../img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide3" class="popup-sale">PUPPIES
                                 FOR SALE</a></h2>
                         <div class="d-none">
-                            <!-- <a href="../img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                                data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                            </a> -->
+                            <a href="../img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide3" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide3" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide3" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -155,12 +164,15 @@
                     data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-3"></div>
-                        <h2><a href="../img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide4" class="popup-sale">PUPPIES
+                        <h2><a href="../img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide4" class="popup-sale">PUPPIES
                                 FOR SALE</a></h2>
                         <div class="d-none">
-                            <!-- <a href="../img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                                data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                            </a> -->
+                            <a href="../img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide4" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide4" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide4" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -169,12 +181,15 @@
                     data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-4"></div>
-                        <h2><a href="../img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide5" class="popup-sale">PUPPIES
+                        <h2><a href="../img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide5" class="popup-sale">PUPPIES
                                 FOR SALE</a></h2>
                         <div class="d-none">
-                            <!-- <a href="../img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                            data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                        </a> -->
+                            <a href="../img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide5" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide5" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="../img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide5" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -226,7 +241,8 @@
                             with thermo-insulation. There are also 15 inner dog houses. The indoor dog houses are
                             air conditioned. The entire board is equipped with video surveillance. </p>
                         <p class="text-center">
-                            The on-site veterinarian is available 24/7. As per client wishes we do preparation of dogs for
+                            The on-site veterinarian is available 24/7. As per client wishes we do preparation of dogs
+                            for
                             exhibitions (ring dressing), preparation of dogs for BH test, professional training for
                             obedience and protection of persons and objects under the supervision of a licensed person
                             trainers with many years of experience.</p>
@@ -1124,7 +1140,8 @@
                                     <ul>
                                         <li>Licensed WUSV helper 2003-2005</li>
                                         <li>State champion IPO 3 clue 2013</li>
-                                        <li>Trainer the only German shepherd who has placement on WUSV World championship from Serbia ever</li>
+                                        <li>Trainer the only German shepherd who has placement on WUSV World
+                                            championship from Serbia ever</li>
                                         <li>Dog trainer of dogs who competed on FCI, IPO, FNBB, WUSV</li>
                                         <li>Helper on many ZTP, Keung and IPO dog events</li>
                                         <li>Training sporting dogs over 20 years</li>
@@ -1206,6 +1223,10 @@
                                         type="text" placeholder="">
                                     <label>Email</label>
                                     <span class="focus-border"></span>
+                                </div>
+                                <div class="col-12 input__block input-effect d-none">
+                                    <input name="email" id="email__confirm" class="effect-16 input__field form__input"
+                                        type="text" placeholder="">
                                 </div>
                                 <div class="col-12 input__block input-effect">
                                     <textarea name="message" id="text__input" rows="8" class="textearea effect-16 input__field form__input"
