--- a/index.html
+++ b/index.html
@@ -114,12 +114,15 @@
                         <blockquote class="d-lg-none">
                             <p>Mi smo odgajivačnica Cane Corso rase pasa iz Nove Pazove</p>
                         </blockquote>
-                        <h2><a href="./img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide1" class="popup-sale">ŠTENCI
+                        <h2><a href="./img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide1" class="popup-sale">ŠTENCI
                                 NA PRODAJU</a></h2>
                         <div class="d-none">
-                            <!-- <a href="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                                data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                            </a> -->
+                            <a href="./img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide1" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide1" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide1" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -128,12 +131,15 @@
                     data-slice1-scale="2" data-slice2-scale="2">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-1"></div>
-                        <h2><a href="./img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide2" class="popup-sale">ŠTENCI
+                        <h2><a href="./img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide2" class="popup-sale">ŠTENCI
                                 NA PRODAJU</a></h2>
                         <div class="d-none">
-                            <!-- <a href="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                            data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                        </a> -->
+                            <a href="./img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide2" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide2" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide2" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -142,12 +148,15 @@
                     data-slice1-scale="1.5" data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-2"></div>
-                        <h2><a href="./img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide3" class="popup-sale">ŠTENCI
+                        <h2><a href="./img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide3" class="popup-sale">ŠTENCI
                                 NA PRODAJU</a></h2>
                         <div class="d-none">
-                            <!-- <a href="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                                data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                            </a> -->
+                            <a href="./img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide3" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide3" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide3" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -156,12 +165,15 @@
                     data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-3"></div>
-                        <h2><a href="./img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide4" class="popup-sale">ŠTENCI
+                        <h2><a href="./img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide4" class="popup-sale">ŠTENCI
                                 NA PRODAJU</a></h2>
                         <div class="d-none">
-                            <!-- <a href="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                                data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                            </a> -->
+                            <a href="./img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide4" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide4" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide4" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -170,12 +182,15 @@
                     data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-4"></div>
-                        <h2><a href="./img/gallery/prodaja/prodaja.jpeg" data-fancybox="slide5" class="popup-sale">ŠTENCI
+                        <h2><a href="./img/gallery/prodaja/prodaja (1).jpeg" data-fancybox="slide5" class="popup-sale">ŠTENCI
                                 NA PRODAJU</a></h2>
                         <div class="d-none">
-                            <!-- <a href="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" data-fancybox="sale"
-                            data-caption="Donald Empire of Wisdom JCH SRB CHSRB - Export Nigeria">
-                        </a> -->
+                            <a href="./img/gallery/prodaja/prodaja (2).jpeg" data-fancybox="slide5" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (3).jpeg" data-fancybox="slide5" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
+                            <a href="./img/gallery/prodaja/prodaja (4).jpeg" data-fancybox="slide5" data-caption="Kyara Empire Of Wisdom - 03.08.2018.">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -1221,6 +1236,10 @@
                                         type="text" placeholder="">
                                     <label>Email</label>
                                     <span class="focus-border"></span>
+                                </div>
+                                <div class="col-12 input__block input-effect d-none">
+                                    <input name="email" id="email__confirm" class="effect-16 input__field form__input"
+                                        type="text" placeholder="">
                                 </div>
                                 <div class="col-12 input__block input-effect">
                                     <textarea name="message" id="text__input" rows="8" class="textearea effect-16 input__field form__input"
