added email validation

--- a/en/index.html
+++ b/en/index.html
@@ -1225,7 +1225,7 @@
                                     <span class="focus-border"></span>
                                 </div>
                                 <div class="col-12 input__block input-effect d-none">
-                                    <input name="email" id="email__confirm" class="effect-16 input__field form__input"
+                                    <input name="email__confirm" id="email__confirm" class="effect-16 input__field form__input"
                                         type="text" placeholder="">
                                 </div>
                                 <div class="col-12 input__block input-effect">
